--- a/changelog
+++ b/changelog
@@ -1,2 +1,5 @@
-2020-09-08 - Vinicius pedrinho
+2020-09-08 - Vinicius Pedrinho
     Criado o projeto do meu github
+
+2021-04-19 - Vinicius Pedrinho
+    Adicionado diretório de CPP
